src/objects/Quarterly_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Account_Name_Text__c</fullName>
        <label>Account Name Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvP_Relationship_Improvement_Areas__c</fullName>
        <label>AvP Relationship Improvement Areas</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Aviation_Portfolio_Relationship_Status__c</fullName>
        <label>Aviation Portfolio Relationship Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quarterly Summaries</relationshipLabel>
        <relationshipName>Quarterly_Summaries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fractional_Key_Takeaway__c</fullName>
        <label>Program Key Takeaway</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Main_Areas_of_AvP_Focus__c</fullName>
        <label>Main Areas of AvP Focus</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Main_Areas_of_AvP_Impact_to_Client__c</fullName>
        <label>Main Areas of AvP Impact to Client</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Portfolio_Optimization_Opportunities__c</fullName>
        <label>Portfolio Optimization Opportunities</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Portfolio_Optimization_Successes__c</fullName>
        <label>Portfolio Optimization Successes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quarter_End_Date__c</fullName>
        <label>Quarter End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <formula>&quot;Q&quot;&amp;Case(month( Quarter_End_Date__c ),
1,&quot;1&quot;,
2,&quot;1&quot;,
3,&quot;1&quot;,
4,&quot;2&quot;,
5,&quot;2&quot;,
6,&quot;2&quot;,
7,&quot;3&quot;,
8,&quot;3&quot;,
9,&quot;3&quot;,
&quot;4&quot;)&amp;&quot; &quot;&amp;text(year(Quarter_End_Date__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Quarter</label>
        <type>Text</type>
    </fields>
    <label>Quarterly Summary</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>QS-{00}</displayFormat>
        <label>Quarterly Summary Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quarterly Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>